--- a/quiz/templates/base/base.html
+++ b/quiz/templates/base/base.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     {% include 'base/css.html' %}
+    {% block static %}
+    {% endblock %}
 </head>
 <body>
     <section>
