--- a/quiz/templates/quiz/quiz_application.html
+++ b/quiz/templates/quiz/quiz_application.html
@@ -1,5 +1,95 @@
 {% extends 'base/base.html' %}
 
+{% block static %}
+<style>
+    body {
+        background-color: #eee;
+    }
+
+    label.checkbox {
+        cursor: pointer;
+        width: 100%;
+    }
+
+    label.checkbox input {
+        position: absolute;
+        top: 0;
+        left: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+
+    label.checkbox p {
+        padding: 4px;
+        border: 1px solid rgb(5, 143, 58);
+        display: inline-block;
+        color: rgb(5, 143, 58);
+        width: 100%;
+        text-align: center;
+        border-radius: 3px;
+        margin-top: 7px;
+        text-transform: uppercase;
+    }
+
+    label.checkbox input:checked+p {
+        border-color: rgb(5, 143, 58);
+        background-color: rgb(5, 143, 58);
+        color: #fff;
+        transition: .9s;
+    }
+
+    .ans {
+        margin-left: 36px !important;
+    }
+
+    .btn:focus {
+        outline: 0 !important;
+        box-shadow: none !important;
+    }
+
+    .btn:active {
+        outline: 0 !important;
+        box-shadow: none !important;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
-<h4>Hello Word</h4>
+<div class="d-flex justify-content-center row mt-5">
+    <div class="col-md-10 col-lg-10">
+        <div class="border">
+            <div class="question bg-white p-3 border-bottom">
+                <div class="d-flex flex-row justify-content-between align-items-center mcq">
+                    <h4>{{ object.category }} MCQ Quiz</h4>
+                </div>
+            </div>
+            <div class="question bg-white p-3 border-bottom">
+                {% for object in object_list %}
+                <div class="d-flex flex-row align-items-center question-title">
+                    <h3 class="text-danger">Q.</h3>
+                    <h5 class="mt-1 ml-2">{{ object }}</h5>
+                </div>
+                <div class="row">
+                    {% for obj in object.quiz_answer_answer.all %}
+                    <div class="col-md-3">
+                        <div class="ans ml-2">
+                            <label class="checkbox">
+                                <input type="checkbox" name="{{ obj }}" value="{{ obj.pk }}"><p>{{ obj }}</p>
+                            </label>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endfor %}
+            </div>
+            <div class="align-items-center p-3 bg-white">
+                <button 
+                class="btn btn-primary d-flex align-items-center btn-success"
+                type="button">
+                    <i class="fa fa-angle-left mt-1 mr-1"></i>&nbsp;Submit
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
