--- a/quiz/templates/base/base.html
+++ b/quiz/templates/base/base.html
@@ -19,5 +19,6 @@
         </div>
     </section>
     {% include 'base/js.html' %}
+    {% block js_extra %} {% endblock js_extra%}
 </body>
 </html>
